# Syntax

./: .env.example  .gitignore  COST_OPTIMIZATION_PLAN.md  Cargo.toml  README.md  STRIPE_TESTING_GUIDE.md  TESTING_PROFITABILITY_PLAN.md  req.js  research_log.txt  test_font.js  test_gemini.js  test_payload.json
scripts/: checkout_with_price.sh  complete_test.sql  create_stripe_checkout.sh  run_complete_test.sh  run_e2e_test.py  test1_rate_limit_check.sql  test2_upgrade_to_operator.sql  test3_five_verifications.sql  test_billing_flow.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_auto_create_subscription.sql  004_chat_and_positions.sql  005_stock_memories.sql  006_available_cash_and_actions.sql  (+10 more)
syntax-core/: Cargo.toml  Dockerfile  SYNTAX_PERF_INCIDENT.md  railway.toml  research_log.txt  start.sh  test_gemini.rs  test_llm_request.rs
syntax-core/examples/: test_llm.rs
syntax-core/src/: auth.rs  config.rs  db.rs  entitlement.rs  llm_race.rs  loop_engine.rs  main.rs  meta_agent.rs  research.rs  test_factory.rs  topic_guard.rs  validator.rs
syntax-core/src/llm/: anthropic.rs  gemini.rs  gemini_metadata.rs  mock.rs  mod.rs  router.rs  tool.rs
syntax-core/src/llm/tools/: mod.rs  portfolio.rs  prices.rs
syntax-core/tests/: llm_integration.rs
syntax-web/: .env.development  .env.example  .env.production  .gitignore  DEPLOYMENT.md  cloudflare-env.d.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  worker-configuration.d.ts  wrangler.toml
(+93 files in other folders)
