[package]
name = "syntax-core"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
